[tool.poetry]
name = "lia"
version = "0.1.0"
description = ""
authors = ["knterada5 <knterada5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
opencv-python = "^4.10.0.84"
numpy = "1.26.4"
easyocr = "^1.7.1"
pandas = "^2.2.2"
plotly = "^5.22.0"
python-bidi = "0.4.2"
flet = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
